--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ layout: default
     <div class="col col-12">
       <div class="container__inner section">
         <div class="section-top">
-          <h5 class="section-title">Articles Récents</h5>
+          <h5 class="section-title">Articles Tièdes</h5>
         </div>
         <div class="contaniner__inner-box">
           <div class="row grid">
